--- a/config/locales/en/template.json
+++ b/config/locales/en/template.json
@@ -1,7 +1,11 @@
 {
-  "TEMPLATE_LIST_FAILED": "Failed to fetch templates",
-  "NO_TEMPLATES_FOUND": "No templates found",
+  "TEMPLATE_CREATED": "Template created successfully",
+  "TEMPLATE_UPDATED": "Template updated successfully",
   "TEMPLATE_NOT_FOUND": "Template not found",
-  "TEMPLATE_NOT_FOUND_OR_UNAUTHORIZED": "Template not found or you don't have permission to access it",
-  "SEARCH_QUERY_REQUIRED": "Search query is required"
+  "REQUIRED_FIELDS_MISSING": "Required fields are missing",
+  "SEARCH_QUERY_REQUIRED": "Search query is required",
+  "TEMPLATE_CODE_EXISTS": "Template code already exists",
+  "INVALID_TEMPLATE_DATA": "Invalid template data provided",
+  "TEMPLATE_CREATION_FAILED": "Failed to create template",
+  "TEMPLATE_UPDATE_FAILED": "Failed to update template"
 } 
