Implement collection template management features
- Added new endpoints for retrieving collection details and templates, and for removing templates from collections in collection.controller.js.
- Implemented validation for removing templates in collection.validator.js, ensuring correct data structure.
- Created database methods for fetching collection details and templates, and for removing templates from collections in collection-template.model.js and collection.model.js.
- Updated routes in collection.route.js to include the new endpoints for fetching and removing templates.
- Enhanced localization messages in collection.json to support new operations related to template removal.

--- a/config/locales/en/collection.json
+++ b/config/locales/en/collection.json
@@ -9,5 +9,6 @@
   "INVALID_TEMPLATES": "One or more templates are invalid or archived",
   "TEMPLATES_ALREADY_IN_COLLECTION": "One or more templates are already in the collection",
   "TEMPLATES_ADDED_TO_COLLECTION": "Templates added to collection successfully",
-  "TEMPLATES_ADDED_TO_COLLECTIONS": "Templates added to collections successfully"
+  "TEMPLATES_ADDED_TO_COLLECTIONS": "Templates added to collections successfully",
+  "TEMPLATES_REMOVED_FROM_COLLECTION": "Templates removed from collection successfully"
 } 
