Add explore section item management functionality
- Introduced new localization messages for explore section item operations in explore_section.json, enhancing user feedback for item addition, removal, and existence checks.
- Implemented routes for managing items within explore sections in explore-section.route.js, including endpoints for listing, adding, and removing items with appropriate authorization and validation.
- Integrated item validation logic to ensure data integrity during item addition and removal processes.

--- a/config/locales/en/explore_section.json
+++ b/config/locales/en/explore_section.json
@@ -4,5 +4,12 @@
   "EXPLORE_SECTION_ARCHIVED": "Explore section archived successfully",
   "EXPLORE_SECTION_SORT_ORDER_UPDATED": "Explore sections sort order updated successfully",
   "EXPLORE_SECTION_NOT_FOUND": "Explore section not found",
-  "EXPLORE_SECTION_OPERATION_FAILED": "Explore section operation failed"
+  "EXPLORE_SECTION_OPERATION_FAILED": "Explore section operation failed",
+  
+  "EXPLORE_SECTION_ITEMS_ADDED": "Items added to explore section successfully",
+  "EXPLORE_SECTION_ITEMS_ADDED_WITH_DUPLICATES": "Some items were added to explore section, others were skipped as they already exist",
+  "EXPLORE_SECTION_ITEMS_ALREADY_EXIST": "All items already exist in this section",
+  "EXPLORE_SECTION_ITEMS_REMOVED": "Items removed from explore section successfully",
+  "EXPLORE_SECTION_ITEMS_NOT_FOUND": "One or more explore section items not found",
+  "EXPLORE_SECTION_ITEMS_REQUIRED": "Please provide at least one item ID to remove"
 } 
