Add collection templates management functionality
- Introduced a new endpoint for adding templates from a collection to an explore section in explore-section.route.js, with appropriate authorization and validation.
- Implemented the addCollectionTemplates function in explore-section-item.controller.js, which handles the retrieval of template IDs from a collection and manages the addition of new templates while checking for duplicates.
- Enhanced the explore_section.json localization file with a new message for cases where a collection has no templates.
- Updated the explore-section-item.model.js to include a method for fetching template IDs from collections.
- Added validation for the new endpoint in explore-section-item.validator.js, ensuring correct data structure for incoming requests.
- Defined a new Joi schema for adding collection templates in explore-section-item.schema.js.

--- a/config/locales/en/explore_section.json
+++ b/config/locales/en/explore_section.json
@@ -11,5 +11,6 @@
   "EXPLORE_SECTION_ITEMS_ALREADY_EXIST": "All items already exist in this section",
   "EXPLORE_SECTION_ITEMS_REMOVED": "Items removed from explore section successfully",
   "EXPLORE_SECTION_ITEMS_NOT_FOUND": "One or more explore section items not found",
-  "EXPLORE_SECTION_ITEMS_REQUIRED": "Please provide at least one item ID to remove"
+  "EXPLORE_SECTION_ITEMS_REQUIRED": "Please provide at least one item ID to remove",
+  "COLLECTION_HAS_NO_TEMPLATES": "The selected collection has no templates"
 } 
