Update template limit error message and adjust maximum templates per pack
- Enhanced the error message for exceeding template limits to include current and adding template counts.
- Reduced the maximum allowed templates per pack from 10 to 2 for stricter validation.

--- a/config/locales/en/packs.json
+++ b/config/locales/en/packs.json
@@ -1,7 +1,7 @@
 {
   "errors": {
     "pack_not_found": "Pack not found",
-    "templates_limit_exceeded": "Cannot add more templates. Maximum {{max}} templates allowed per pack",
+    "templates_limit_exceeded": "Cannot add {{adding}} templates. Pack already has {{current}} templates. Maximum {{max}} templates allowed per pack",
     "template_not_found": "Template not found",
     "template_already_exists": "Template already exists in the pack"
   },
