Add video generation and flow composer functionality
- Introduced new endpoints for video generation and video flow composer, including input validation for clips and character ownership verification.
- Enhanced rate limiting for video flow composer actions to prevent abuse and ensure fair usage.
- Updated Kafka event topics to support video generation requests and logging of admin activities related to video processing.
- Added new localization strings for video generation status and error handling, improving user feedback and accessibility.

--- a/config/locales/en/generator.json
+++ b/config/locales/en/generator.json
@@ -1,11 +1,14 @@
 {
   "INVALID_REQUEST_DATA": "Invalid generation request data",
   "IMAGE_GENERATION_STARTED": "Image generation started",
+  "VIDEO_GENERATION_STARTED": "Video generation started",
+  "VIDEO_FLOW_COMPOSER_STARTED": "Video flow composer generation started",
   "IMAGES_GENERATED": "Images generated",
   "GENERATION_FAILED": "Failed to generate images",
   "GENERATION_RATE_LIMIT_EXCEEDED": "Generation rate limit exceeded. Please try again later.",
   "PROJECT_NOT_FOUND": "Project not found or you don't have permission to access it",
   "CHARACTER_NOT_FOUND": "Character not found",
+  "GENERATION_NOT_FOUND": "Generation not found or you don't have permission to access it",
   "INVALID_GENERATION_OPTIONS": "Invalid generation options provided",
   "MODEL_TUNING_QUEUED": "Model tuning queued",
   "MODEL_TUNING_STARTED": "Model tuning started successfully",
