Enhance AI model management with creation and update functionalities
- Added new API endpoints for creating and updating AI models, including validation for input data.
- Implemented error handling for duplicate model IDs and non-existent platforms during creation and update processes.
- Introduced new localization strings for success and error messages related to AI model operations.
- Enhanced the AI model controller to support sorting and retrieval of models, ensuring consistent data presentation.
- Added validation middleware for AI model and platform creation, improving data integrity and user feedback.

--- a/config/locales/en/ai_model.json
+++ b/config/locales/en/ai_model.json
@@ -6,5 +6,12 @@
   "NO_AI_MODELS_FOUND": "No AI models available",
   "AI_MODEL_OPERATION_FAILED": "AI model operation failed",
   "PLATFORM_NOT_FOUND": "AI model platform not found",
-  "INVALID_AI_MODEL_DATA": "Invalid AI model data provided"
+  "INVALID_AI_MODEL_DATA": "Invalid AI model data provided",
+  "AI_MODEL_CREATED_SUCCESSFULLY": "AI model created successfully",
+  "AI_MODEL_UPDATED_SUCCESSFULLY": "AI model updated successfully",
+  "AI_MODEL_ALREADY_EXISTS": "AI model with this ID already exists",
+  "AI_MODEL_CREATE_FAILED": "Failed to create AI model",
+  "AI_MODEL_UPDATE_FAILED": "Failed to update AI model",
+  "PLATFORM_CREATED_SUCCESSFULLY": "Platform created successfully",
+  "PLATFORM_CREATE_FAILED": "Failed to create platform"
 } 
