--- a/config/locales/te/ai_model.json
+++ b/config/locales/te/ai_model.json
@@ -1,10 +1,15 @@
 {
   "AI_MODEL_LIST_FAILED": "AI మోడల్‌లను పొందడంలో విఫలమైంది",
   "AI_MODEL_NOT_FOUND": "AI మోడల్ కనుగొనబడలేదు",
-  "AI_MODEL_TABLE_NOT_FOUND": "AI మోడల్‌ల టేబుల్ కనుగొనబడలేదు",
-  "AI_MODEL_FIELD_ERROR": "AI మోడల్‌ల క్వెరీలో చెల్లని ఫీల్డ్",
+  "AI_MODEL_TABLE_NOT_FOUND": "AI మోడల్ టేబుల్ కనుగొనబడలేదు",
+  "AI_MODEL_FIELD_ERROR": "AI మోడల్ క్వేరీలో చెల్లని ఫీల్డ్",
   "NO_AI_MODELS_FOUND": "AI మోడల్‌లు అందుబాటులో లేవు",
   "AI_MODEL_OPERATION_FAILED": "AI మోడల్ ఆపరేషన్ విఫలమైంది",
   "PLATFORM_NOT_FOUND": "AI మోడల్ ప్లాట్‌ఫారమ్ కనుగొనబడలేదు",
-  "INVALID_AI_MODEL_DATA": "చెల్లని AI మోడల్ డేటా అందించబడింది"
+  "INVALID_AI_MODEL_DATA": "చెల్లని AI మోడల్ డేటా అందించబడింది",
+  "AI_MODEL_CREATED_SUCCESSFULLY": "AI మోడల్ విజయవంతంగా సృష్టించబడింది",
+  "AI_MODEL_UPDATED_SUCCESSFULLY": "AI మోడల్ విజయవంతంగా అప్‌డేట్ చేయబడింది",
+  "AI_MODEL_ALREADY_EXISTS": "ఈ ID తో AI మోడల్ ఇప్పటికే ఉంది",
+  "AI_MODEL_CREATE_FAILED": "AI మోడల్ సృష్టించడంలో విఫలమైంది",
+  "AI_MODEL_UPDATE_FAILED": "AI మోడల్ అప్‌డేట్ చేయడంలో విఫలమైంది"
 } 
