Implement platform update functionality and presigned URL generation for logos
- Added a new API endpoint for updating platform details, including validation for input data.
- Enhanced the AI model controller to generate presigned URLs for platform logos, supporting both public and private storage buckets.
- Updated the AI model model to include platform logo fields and added logic for updating platform information in the database.
- Improved validation schemas to accommodate new fields for platform logos, ensuring data integrity during updates.
- Introduced new localization strings for success messages related to platform updates.

--- a/config/locales/en/ai_model.json
+++ b/config/locales/en/ai_model.json
@@ -13,5 +13,6 @@
   "AI_MODEL_CREATE_FAILED": "Failed to create AI model",
   "AI_MODEL_UPDATE_FAILED": "Failed to update AI model",
   "PLATFORM_CREATED_SUCCESSFULLY": "Platform created successfully",
-  "PLATFORM_CREATE_FAILED": "Failed to create platform"
+  "PLATFORM_CREATE_FAILED": "Failed to create platform",
+  "PLATFORM_UPDATED_SUCCESSFULLY": "Platform updated successfully"
 } 
