--- a/config/locales/en/template.json
+++ b/config/locales/en/template.json
@@ -8,4 +8,6 @@
   "INVALID_TEMPLATE_DATA": "Invalid template data provided",
   "TEMPLATE_CREATION_FAILED": "Failed to create template",
   "TEMPLATE_UPDATE_FAILED": "Failed to update template"
+  ,
+  "CREDITS_INSUFFICIENT": "Credits provided are insufficient. Minimum required: {{minimumCreditsRequired}}, provided: {{providedCredits}}"
 } 
