Add bulk archive functionality for templates
- Introduced a new endpoint `/api/v1/templates/archive/bulk` to allow archiving multiple templates in a single request.
- Implemented validation rules for the request body, ensuring a minimum of 1 and a maximum of 50 template IDs.
- Enhanced the template model with a `bulkArchiveTemplates` function for efficient database operations.
- Updated the template controller to handle bulk archiving and log activities for each archived template.
- Added new locale messages for successful and failed bulk archive operations.
- Created integration tests to validate the bulk archiving process and its error handling.

--- a/config/locales/en/template.json
+++ b/config/locales/en/template.json
@@ -7,7 +7,9 @@
   "TEMPLATE_CODE_EXISTS": "Template code already exists",
   "INVALID_TEMPLATE_DATA": "Invalid template data provided",
   "TEMPLATE_CREATION_FAILED": "Failed to create template",
-  "TEMPLATE_UPDATE_FAILED": "Failed to update template"
-  ,
+  "TEMPLATE_UPDATE_FAILED": "Failed to update template",
+  "TEMPLATE_ARCHIVED": "Template archived successfully",
+  "TEMPLATES_BULK_ARCHIVED": "Templates archived successfully",
+  "NO_TEMPLATES_ARCHIVED": "No templates were archived",
   "CREDITS_INSUFFICIENT": "Credits provided are insufficient. Minimum required: {{minimumCreditsRequired}}, provided: {{providedCredits}}"
 } 
