--- a/config/locales/en/template.json
+++ b/config/locales/en/template.json
@@ -11,5 +11,9 @@
   "TEMPLATE_ARCHIVED": "Template archived successfully",
   "TEMPLATES_BULK_ARCHIVED": "Templates archived successfully",
   "NO_TEMPLATES_ARCHIVED": "No templates were archived",
+  "TEMPLATES_BULK_UNARCHIVED": "Templates unarchived successfully",
+  "NO_TEMPLATES_UNARCHIVED": "No templates were unarchived",
+  "ARCHIVED_TEMPLATES_LISTED": "Archived templates listed successfully",
+  "NO_ARCHIVED_TEMPLATES": "No archived templates found",
   "CREDITS_INSUFFICIENT": "Credits provided are insufficient. Minimum required: {{minimumCreditsRequired}}, provided: {{providedCredits}}"
 } 
