Add template copy functionality and update locale messages
- Implemented a new endpoint to copy templates, allowing users to duplicate existing templates with all associated data.
- Enhanced the template controller to handle the copying process, including generating unique IDs and preparing related clips.
- Added a new locale message for successful template copying to improve user feedback.
- Updated the template routes to include the new copy template endpoint, ensuring proper authorization checks are in place.

--- a/config/locales/en/template.json
+++ b/config/locales/en/template.json
@@ -15,5 +15,6 @@
   "NO_TEMPLATES_UNARCHIVED": "No templates were unarchived",
   "ARCHIVED_TEMPLATES_LISTED": "Archived templates listed successfully",
   "NO_ARCHIVED_TEMPLATES": "No archived templates found",
-  "CREDITS_INSUFFICIENT": "Credits provided are insufficient. Minimum required: {{minimumCreditsRequired}}, provided: {{providedCredits}}"
+  "CREDITS_INSUFFICIENT": "Credits provided are insufficient. Minimum required: {{minimumCreditsRequired}}, provided: {{providedCredits}}",
+  "TEMPLATE_COPIED": "Template copied successfully"
 } 
