--- a/config/locales/en/template.json
+++ b/config/locales/en/template.json
@@ -16,5 +16,17 @@
   "ARCHIVED_TEMPLATES_LISTED": "Archived templates listed successfully",
   "NO_ARCHIVED_TEMPLATES": "No archived templates found",
   "CREDITS_INSUFFICIENT": "Credits provided are insufficient. Minimum required: {{minimumCreditsRequired}}, provided: {{providedCredits}}",
-  "TEMPLATE_COPIED": "Template copied successfully"
-} 
+  "TEMPLATE_COPIED": "Template copied successfully",
+  "PUBLISH_ERROR_ASSETS_TYPE_MISSING": "Asset type (AI/Non-AI) is missing. Cannot publish.",
+  "PUBLISH_ERROR_NAME_MISSING": "Template name is missing.",
+  "PUBLISH_ERROR_CODE_MISSING": "Template code is missing.",
+  "PUBLISH_ERROR_TYPE_MISSING": "Template type (Free/Premium/AI) is missing.",
+  "PUBLISH_ERROR_OUTPUT_TYPE_MISSING": "Template output type (Image/Video) is missing.",
+  "PUBLISH_ERROR_COLOR_VIDEO_MISSING": "Color video asset is missing.",
+  "PUBLISH_ERROR_MASK_VIDEO_MISSING": "Mask video asset is missing.",
+  "PUBLISH_ERROR_BODYMOVIN_JSON_MISSING": "Bodymovin JSON asset is missing.",
+  "PUBLISH_ERROR_AI_CLIPS_MISSING": "AI templates must have at least one clip.",
+  "PUBLISH_ERROR_CLIP_WORKFLOW_MISSING": "Clip {{index}} is missing workflow data.",
+  "TEMPLATE_STATUS_UPDATED": "Template status updated successfully",
+  "TEMPLATES_STATUS_BULK_UPDATED": "Templates status updated successfully"
+}
