feat: Implement copy plan functionality, including new endpoint, model methods, and validation for plan ID

--- a/config/locales/en/payment_plans.json
+++ b/config/locales/en/payment_plans.json
@@ -10,5 +10,6 @@
   "PLAN_ACTIVATED": "Payment plan activated successfully.",
   "PLAN_DEACTIVATED": "Payment plan deactivated successfully.",
   "ACTIVATION_FAILED": "Cannot activate plan. Missing required data.",
-  "STATUS_UPDATE_FAILED": "Failed to update plan status."
+  "STATUS_UPDATE_FAILED": "Failed to update plan status.",
+  "COPY_FAILED": "Failed to copy payment plan."
 }
